Factorized some code

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -12,21 +12,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88f790cf",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-11-10T10:40:49.541339Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
     "from joblib import Parallel, delayed\n",
     "from tqdm import tqdm\n",
@@ -58,20 +45,16 @@
     "\n",
     "Datasets available :\n",
     "\n",
-    "* MackeyGlass\n",
-    "* Lorenz\n",
-    "* Sunspot"
+    "* ReservoirPy: MackeyGlass, Lorenz\n",
+    "* Custom: Sunspot"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "94221304-8224-40d2-9f4f-392338bc0ef4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-26T14:20:30.749208Z",
-     "iopub.status.busy": "2024-09-26T14:20:30.748443Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d643a04-0a92-420b-8d57-e777e365dc69",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_prediction import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -116,11 +99,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ae223b0-1d06-4ced-9728-c580ed708a06",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "5762b15b-a599-4ea4-b6b3-cb48fdc78947",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-10-04T11:57:47.080633Z",
+     "iopub.status.busy": "2024-10-04T11:57:47.080493Z",
+     "iopub.status.idle": "2024-10-04T11:57:49.539282Z",
+     "shell.execute_reply": "2024-10-04T11:57:49.539027Z",
+     "shell.execute_reply.started": "2024-10-04T11:57:47.080624Z"
+    }
+   },
    "source": [
     "from datasets.load_classification import load_dataset_classification\n",
     "is_instances_classification = True\n",
@@ -128,19 +117,19 @@
     "\n",
     "dataset_name = \"FSDD\"\n",
     "\n",
-    "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
+    "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c9d58795-9a5d-4b25-9237-a278de6600c6",
+   "metadata": {},
+   "source": [
+    "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(16, 5))\n",
-    "ax.plot(range(len(X_train_raw[0])), X_train_raw[0])\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
-    "fontsize=30\n",
-    "ax.tick_params(axis='both', labelsize=fontsize)\n",
-    "plt.xlabel('Time', size=fontsize)\n",
-    "plt.ylabel('Value', size=fontsize)\n",
-    "plt.legend(fontsize=fontsize)\n",
-    "plt.show()"
+    "# Plot data distribution\n",
+    "if is_instances_classification:\n",
+    "    plot_classes_distribution(Y_train_raw, Y_test, val = False)\n"
    ]
   },
   {
@@ -154,27 +143,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4873964-dc3e-4a43-ba84-fe73d228a47c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets.preprocessing import plot_data_distribution\n",
-    "\n",
-    "# Plot data distribution\n",
-    "if is_instances_classification:\n",
-    "    plot_data_distribution(Y_train_raw, Y_test, val = False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "90237f4e-2418-48a9-a067-aece8c922912",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedKFold, TimeSeriesSplit, StratifiedGroupKFold\n",
     "from datasets.preprocessing import flexible_indexing\n",
-    "from datasets.preprocessing import plot_data_distribution\n",
+    "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
     "# CROSS-VALIDATION METHODS\n",
     "# SEED\n",
@@ -204,7 +179,7 @@
     "            X_test = X_test_raw\n",
     "\n",
     "    if is_instances_classification:\n",
-    "        plot_data_distribution(Y_train, Y_val, val = True)\n",
+    "        plot_classes_distribution(Y_train, Y_val, val = True)\n",
     "else: # then we use the test dataset\n",
     "    if is_multivariate:\n",
     "        X_train_band, X_test_band = X_train_raw, X_test_raw\n",
@@ -296,8 +271,6 @@
     "        X_test_band = generate_multivariate_dataset(\n",
     "            X_test, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
-    "    if spectral_representation is not None:\n",
-    "        use_spectral_representation = True\n",
     "elif is_multivariate and not use_spectral_representation:\n",
     "    print(f\"Converting multivariate to {spectral_representation}\") # if None we convert to temporal\n",
     "    X_train_band = generate_multivariate_dataset(\n",
@@ -312,7 +285,10 @@
     "            X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
     "else:\n",
-    "    print(\"Data is already spectral, nothing to do\")"
+    "    print(\"Data is already spectral, nothing to do\")\n",
+    "\n",
+    "if spectral_representation is not None:\n",
+    "    use_spectral_representation = True"
    ]
   },
   {
@@ -353,21 +329,21 @@
     "    WATCH_TO = merge_point_index + 250\n",
     "    DIFF = WATCH_TO - WATCH_FROM \n",
     "    flat_peak_freqs = np.hstack(peak_freqs) if is_multivariate else peak_freqs\n",
-    "\n",
-    "    print(WATCH_FROM, WATCH_TO)\n",
-    "    # Plot for a subset N features within a range arround transition from train to test\n",
-    "    fig, ax = plt.subplots(figsize=(16, 8))\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(14, 4))\n",
+    "    colors = color_palette(\"tab20\")\n",
+    "    j = 0\n",
     "    nb_variables = X_train_band.shape[1] if not is_instances_classification else X_train_band[0].shape[1]\n",
     "    for i in np.random.randint(0, nb_variables, size=3): \n",
-    "        plt.plot(range(DIFF), combined_data[:, i][WATCH_FROM:WATCH_TO], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
-    "    #plt.plot(steps, combined_Y[steps], label=\"Prediction\")\n",
-    "    print('Feature Values Around Merge Point')\n",
+    "        plt.plot(range(DIFF), combined_data[:, i][WATCH_FROM:WATCH_TO], color=colors[j], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
+    "        j += 1\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
+    "    \n",
     "    plt.xlabel('Sample Index')\n",
     "    plt.ylabel('Feature Value')\n",
     "\n",
-    "fontsize=30\n",
+    "fontsize=12\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel(plt.gca().get_xlabel(), fontsize=fontsize)\n",
     "plt.ylabel(plt.gca().get_ylabel(), fontsize=fontsize)\n",
@@ -445,16 +421,16 @@
     "    # NOISE\n",
     "    # UNI\n",
     "    if not is_multivariate:\n",
-    "        X_train_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train, desc=\"TRAIN\")]\n",
+    "        X_train_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train, desc=\"TRAIN UNI\")]\n",
     "        if X_val is not None:\n",
-    "            X_val_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val, desc=\"VAL\")]\n",
-    "        X_test_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test, desc=\"TEST\")]\n",
+    "            X_val_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val, desc=\"VAL UNI\")]\n",
+    "        X_test_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test, desc=\"TEST UNI\")]\n",
     "        \n",
     "    # MULTIX\n",
-    "    X_train_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train_band, desc=\"TRAIN\")]\n",
+    "    X_train_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train_band, desc=\"TRAIN MULTI\")]\n",
     "    if X_val_band is not None:\n",
-    "        X_val_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val_band, desc=\"VAL\")]\n",
-    "    X_test_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test_band, desc=\"TEST\")]\n",
+    "        X_val_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val_band, desc=\"VAL MULTI\")]\n",
+    "    X_test_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test_band, desc=\"TEST MULTI\")]\n",
     "\n",
     "else:  #if prediction\n",
     "    # NOISE\n",
@@ -540,7 +516,7 @@
     "    print(\"\\nCheck it ! \\nFirst array \", X_train_band.shape, \" and second array\", X_train_band.shape)\n",
     "    common_size = X_train_band.shape[common_index]\n",
     "\n",
-    "common_size"
+    "print(\"Common size:\", common_size)"
    ]
   },
   {
@@ -569,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a0645f-3208-464d-b303-85a2ad9d1fe3",
+   "id": "60ce2087-6574-440e-a849-cecea6e708b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,27 +556,48 @@
     "\n",
     "START = 0\n",
     "END = 500\n",
+    "\n",
     "DIFF = END - START\n",
-    "#CPlot the two for different frequencies\n",
-    "# Define your frequency indices in a list\n",
-    "random_neurons_indices = np.random.randint(0, train_band_data.shape[0], size=3)\n",
     "flat_peak_freqs = np.hstack(peak_freqs) if is_multivariate else peak_freqs\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(16, 8))\n",
+    "fig, ax = plt.subplots(figsize=(14, 4))\n",
     "colors = color_palette(\"tab20\")\n",
     "j = 0\n",
-    "for i in random_neurons_indices:\n",
+    "for i in np.random.randint(0, train_band_data.shape[0], size=3):\n",
     "    plt.plot(range(DIFF), train_band_data[i, START:END], color=colors[j], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
     "    j += 1\n",
-    "#plt.plot(steps, combined_Y[steps], label=\"Prediction\")\n",
-    "print('Scaled Feature Values')\n",
+    "\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
-    "fontsize=30\n",
+    "fontsize=12\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Time', size=fontsize)\n",
     "plt.ylabel('Value', size=fontsize)\n",
-    "plt.legend(fontsize=fontsize)\n"
+    "plt.legend(fontsize=fontsize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d58c6a9b-743a-4664-8fd1-773cd3ce3b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIFF = WATCH_TO - WATCH_FROM \n",
+    "flat_peak_freqs = np.hstack(peak_freqs) if is_multivariate else peak_freqs\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(14, 4))\n",
+    "colors = color_palette(\"tab20\")\n",
+    "j = 0\n",
+    "nb_variables = X_train_band.shape[1] if not is_instances_classification else X_train_band[0].shape[1]\n",
+    "for i in np.random.randint(0, nb_variables, size=3): \n",
+    "    plt.plot(range(DIFF), combined_data[:, i][WATCH_FROM:WATCH_TO] color=colors[j], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
+    "    j += 1\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "\n",
+    "plt.xlabel('Sample Index')\n",
+    "plt.ylabel('Feature Value')"
    ]
   },
   {
@@ -682,17 +679,8 @@
     "K = math.ceil(RESERVOIR_SIZE / common_size)\n",
     "n = common_size * K\n",
     "print(\"Dimension of our reservoir :\", n)\n",
-    "print(\"Copy of each time serie :\", K)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b79b6eb1-da0b-4964-9a18-630ab0d690eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "common_size"
+    "print(\"Copy of each time serie :\", K)\n",
+    "print(\"Number of multivariate inputs :\", common_size)"
    ]
   },
   {
@@ -708,7 +696,7 @@
    "id": "3bbc2c01-de54-4bf6-8fa0-1dbde5fe21c2",
    "metadata": {},
    "source": [
-    "#### To set your own"
+    "#### Customs"
    ]
   },
   {
@@ -756,7 +744,7 @@
    "id": "3e7ba684-539a-4f94-99f0-9bf242717c8b",
    "metadata": {},
    "source": [
-    "#### To load from optuna"
+    "#### Optuna's bests"
    ]
   },
   {
@@ -767,27 +755,16 @@
    "outputs": [],
    "source": [
     "import optuna\n",
-    "from performances.utility import camel_to_snake\n",
+    "from performances.utility import retrieve_best_model\n",
     "\n",
-    "function_name = \"hadsp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
-    "\n",
-    "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
-    "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
-    "\n",
-    "if variate_type == \"uni\" and is_multivariate:\n",
-    "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
-    "    \n",
-    "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
-    "url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
-    "\n",
-    "study = optuna.load_study(study_name=study_name, storage=url) # To load an existing study\n",
+    "function_name = \"random\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "study = retrieve_best_model(\"random\", dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "\n",
     "# Print the best hyperparameters\n",
     "print(\"Best hyperparameters: \")\n",
     "for param_name, param_value in study.best_trial.params.items():\n",
     "    globals()[param_name] = param_value\n",
     "    print(param_name, param_value)\n",
-    "\n",
     "\n",
     "if not is_instances_classification:\n",
     "    use_full_instance = None\n",
@@ -826,10 +803,7 @@
     "from connexion_generation.hag import run_algorithm\n",
     "from scipy import sparse\n",
     "\n",
-    "\n",
-    "function_name = \"hadsp\" # \"desp\" ou \"hadsp\"\n",
-    "\n",
-    "def initialise_and_train(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, seed, training_set):\n",
+    "def initialise_and_run(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, seed, training_set):\n",
     "    \n",
     "    Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=seed)\n",
     "    bias *= bias_scaling\n",
@@ -846,7 +820,8 @@
     "                            min_variance, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                            max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = \"pearson\", \n",
     "                            intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = 12, visualize=False, record_history=True)\n",
-    "\n",
+    "    else:\n",
+    "        raise ValueError(f\"Invalid function_name: {function_name}, should be 'hadsp' or 'desp'\")\n",
     "    connectivity =  np.count_nonzero(W) / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "    sr = np.max(np.abs(eigen))\n",
@@ -889,7 +864,7 @@
     " sr_hag_multi, \n",
     " state_history_hag,\n",
     " delta_z_history,\n",
-    " W_history) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, SEED, X_pretrain_band)\n",
+    " W_history) = initialise_and_run(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, SEED, X_pretrain_band)\n",
     "\n",
     "\n",
     "from matplotlib.colors import ListedColormap\n",
@@ -982,7 +957,7 @@
    "id": "7c886405-da86-4b5e-858b-fabeff6f5473",
    "metadata": {},
    "source": [
-    "#### Random matrice"
+    "## Random matrice"
    ]
   },
   {
@@ -992,12 +967,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# random + multi\n",
+    "from reservoir.reservoir import init_matrices\n",
+    "from scipy import sparse\n",
     "\n",
-    "#connectivity_band = 0.397219709836612\n",
-    "#sr_hag_multi = 1.0\n",
-    "#bias_scaling = 0.005\n",
-    "#input_scaling = 0.11499999999999999\n",
+    "connectivity_band = connectivity\n",
+    "sr_hag_multi = spectral_radius\n",
     "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, K, sr_hag_multi, seed=19823)\n",
     "bias_random_multi= bias_random_multi*bias_scaling\n",
     "Win_random_multi= Win_random_multi*input_scaling\n",
@@ -1011,7 +985,7 @@
    "id": "21b9a1da-cc49-4b49-aa7c-935d8c12cb2c",
    "metadata": {},
    "source": [
-    "## Richness"
+    "# Richness"
    ]
   },
   {
@@ -1019,7 +993,18 @@
    "id": "da0eae33-4a27-49ce-b7b5-1be0dadd9c7e",
    "metadata": {},
    "source": [
-    "### Pearson"
+    "## Pearson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24170c46-7cc0-4b20-85bf-e29b22589da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from analysis.richness import pearson\n",
+    "num_windows = 150"
    ]
   },
   {
@@ -1029,9 +1014,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analysis.richness import pearson\n",
-    "num_windows = 150\n",
-    "\n",
     "mean_correlations_hag, std_correlations_hag = pearson(state_history_hag, num_windows=num_windows)"
    ]
   },
@@ -1161,7 +1143,7 @@
    "id": "42557f32-cb89-45ce-810c-15a35cb5d775",
    "metadata": {},
    "source": [
-    "### IPC"
+    "## IPC"
    ]
   },
   {
@@ -1267,7 +1249,7 @@
    "id": "272473cc-1309-4a35-978e-d6197c3a8f31",
    "metadata": {},
    "source": [
-    "### LUD"
+    "## LUD"
    ]
   },
   {
@@ -1339,17 +1321,7 @@
    "id": "4fc60097-34c7-4c5e-9ff9-a4e50bd8cee0",
    "metadata": {},
    "source": [
-    "### LUD True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b26f9bf-810b-49f6-8b80-d56f49aa55c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array(state_history_hag).shape"
+    "## LUD True"
    ]
   },
   {
